--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,51 @@
 {
-  "name": "$vendor_name$/$package_name$",
-  "description": "$description$",
-  "minimum-stability": "$stability$",
-  "license": "$license$",
+  "name": "braiphub/laravel-amqp",
+  "description": "Laravel AMQP",
+  "keywords": [
+    "laravel",
+    "amqp",
+    "rabbitmq"
+  ],
+  "type": "library",
+  "minimum-stability": "dev",
+  "license": "MIT",
   "authors": [
     {
-      "name": "$author$",
-      "email": "$email$"
+      "name": "matheuscarmo",
+      "email": "matheus_fellip@hotmail.com"
     }
   ],
   "require": {
-    $END$
+    "php": "^8.0",
+    "php-amqplib/php-amqplib": "v3.1.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.6",
+    "illuminate/support": "v10.37.3",
+    "mockery/mockery": "1.6.7",
+    "php-mock/php-mock-phpunit": "2.6.1"
+  },
+  "autoload": {
+    "psr-4": {
+      "Braiphub\\Amqp\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Braiphub\\Amqp\\Tests\\": "tests/"
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Braiphub\\Amqp\\AmqpServiceProvider"
+      ],
+      "aliases": {
+        "Amqp": "Braiphub\\Amqp\\Facades\\Amqp"
+      }
+    }
+  },
+  "scripts": {
+    "test": "phpunit"
   }
 }
